<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="categoryArray">
        <item>Category</item>
        <item>Beverages</item>
        <item>Bakery</item>
        <item>Fruits</item>
        <item>Electronics</item>
        <item>Meat</item>
        <item>Veggies</item>
    </string-array>
    <string name="app_name">super_app</string>
    <string name="enter_your_e_mail">enter your e-mail</string>
    <string name="enter_a_password">enter a password</string>
    <string name="reEnter_a_password">re_enter password</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign In</string>
    <string name="home_address">Home address</string>
    <string name="recently_address">Recently used</string>
    <string name="namal">Namal str. 6</string>
    <string name="herzel">Herzel stl. 3</string>
    <string name="have_no_account">Have no account?</string>
    <string name="log_in">Log in</string>
    <string name="addresses">Addresses:</string>
    <string name="explore_by_category">Explore by Category</string>
    <string name="meat">Meat</string>
    <string name="veggie">Veggies</string>
    <string name="signUp">Sign Up</string>
    <string name="enter_your_name">enter your name</string>
    <string name="fruits">Fruits</string>
    <string name="enter_your_address">enter your address</string>
    <string name="UpdateUserProfile">Update user profile</string>
    <string name="OrderHistory">Order History</string>
    <string name="coinBag">Coin Bag</string>
    <string name="Addaddress">your adress</string>
    <string name="street">street</string>
    <string name="Apartment">Apatment</string>
    <string name="description">Description</string>
    <string name="productDescribe">description...</string>
    <string name="ADMIN">8dBeKyo5aZSNAV2yAmnFDes2soz1</string>
    <string name="productName">product Name\n</string>
    <string name="productPrice">product Price</string>
    <string name="produceQuantity">product Quantity</string>
    <string name="productCategory">product Category</string>
    <string name="discount">discount</string>
    <string name="checkOut">checkout</string>
    <string-array name="israeliCities">
        <item>Filter By city</item>
        <item>Jerusalem</item>
        <item>Tel Aviv</item>
        <item>Haifa</item>
        <item>Rishon LeZion</item>
        <item>Petah Tikva</item>
        <item>Ashdod</item>
        <item>Netanya</item>
        <item>Beer Sheva</item>
        <item>Bnei Brak</item>
        <item>Holon</item>
        <item>Ramat Gan</item>
        <item>Bat Yam</item>
        <item>Ashkelon</item>
        <item>Herzliya</item>
        <item>Kfar Saba</item>
        <item>Raanana</item>
        <item>Rehovot</item>
        <item>Nazareth</item>
        <item>Ramat HaSharon</item>
        <item>Modiin-Maccabim-Reut</item>
        <item>Hadera</item>
        <item>Lod</item>
        <item>Ramla</item>
        <item>Acre</item>
        <item>Bet Shemesh</item>
        <item>Eilat</item>
        <item>Dimona</item>
        <item>Tiberias</item>
        <item>Kiryat Gat</item>
        <item>Nahariya</item>
        <item>Givatayim</item>
        <item>Ness Ziona</item>
        <item>Yavne</item>
        <item>Yehud-Monosson</item>
        <item>Ras al-Ayn</item>
        <item>Tira</item>
        <item>Kafr Qasim</item>
        <item>Sderot</item>
        <item>Tamra</item>
        <item>Afula</item>
        <item>Beit Shean</item>
        <item>Kiryat Shmona</item>
        <item>Migdal HaEmek</item>
        <item>Or Akiva</item>
        <item>Tirat Carmel</item>
        <item>Umm al-Fahm</item>
        <item>Maalot-Tarshiha</item>
        <item>Qalansawe</item>
        <item>Karmiel</item>
        <item>Arad</item>
        <item>Hod HaSharon</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birthdate">birth date</string>
    <string name="personal_de">Edit Personal Details\n\n</string>
    <string name="userName">User Name\n</string>
    <string name="openOrder">open order\n</string>
    <string name="email">Email</string>
    <string name="AllOrder">All Orders</string>
    <string name="Category">Categories</string>
    <string name="Brush">Brush</string>
    <string name="Electronics">Electronics</string>
    <string name="Meat">Meat\n</string>
    <string name="FruitsAndVeggies">Fruits and Vegtables</string>
    <string name="ProductName">Product Name</string>
    <string name="addToCart">Add</string>
    <string name="price">price</string>
    <string name="quantity">1</string>
    <string name="dialog_message">Are you sure you want to delete this product?</string>
    <string name="dialog_title">Confirm</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="productDetails">Product Details:</string>
    <string name="appDescription">Welocme to the sharedSal app, ome to you from shufersal. \n\nJoin yor neighborse and order food supliies toghether, saving costs and aloowing you to order items you wouldnt be able to when orderdering delivery alone!</string>
    <string name="productPriceAfterDiscount">price after discount</string>
    <string name="createNewOrder">Create New Order</string>
    <string name="deliveryDate">Delivery date</string>
    <string name="Continue">Continue</string>
    <string name="AddaddressForDelivery">Delivery address</string>
    <string name="ContactDetails">Contact Details:</string>
    <string name="phoneNum">05********</string>
    <string name="fullname">Full Name</string>
    <string name="countOfProduct">0</string>
    <string name="Ordersyouown">Orders you own</string>
    <string name="CreatorName">Full name of owner</string>
    <string name="DeliveryAddress">Delivery\'s Address</string>
    <string name="join">Join</string>
    <string name="phone">Phone number\n</string>
    <string name="noOrderText">you have no orders in this section</string>
    <string name="getoutOrder">Are you sure you don\'t want to be part of the invitation?</string>
    <string name="yourOrders">Your Orders:</string>
    <string name="AllordersToYourAddress">Orders To Your Address</string>
    <string name="joinOrder">Do you want to join the invitation?</string>
    <string name="Shoppingcart">Shopping Cart</string>
    <string name="count">1</string>
    <string name="getoutProduct">Are you sure you don\'t want to delete this product?</string>
    <string name="paymentpage">Payment Page</string>
    <string name="deliveryDateTitle">Delivery Date:</string>
    <string name="OrderDetails">Order Details</string>
    <string name="cardDetails">Enter Card Details:</string>
    <string name="cardNumber">Card Number</string>
    <string name="expirationdate">Expiration Date</string>
    <string name="CVV">CVV</string>
    <string name="pay">Pay</string>
    <string name="orders">Orders</string>
    <string name="create_order">Create Order</string>
    <string name="open_orders">Open Orders</string>
    <string name="logOut">logOut</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="totalPrice">Total Price</string>
    <string name="Checkout">Checkout</string>
    <string name="Cart">Cart</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_category">Product Category</string>
    <string name="product_description">Product Description</string>
    <string name="order_name">Costumer Name</string>
    <string name="order_price">Order Price</string>
    <string name="order_products">Products In Order</string>
    <string name="product_quantity">Product quantity</string>
    <string name="No_order_history">No order history found.</string>
    <string name="OrderName">Order Name</string>
    <string name="OrderPrice">Order Price</string>
    <string name="Address">Address</string>
    <string name="OrderStatus">OrderStatus</string>
    <string name="DeliveryDate" tools:ignore="DuplicateDefinition">Delivery Date</string>
    <string name="until_now_you_saved">Until now you saved:</string>
    <string name="total">Total:</string>
    <string name="order_delivery_date">Order Delivery Date</string>
    <string name="order_address">Order Address</string>
    <string name="order">Order</string>
    <string name="joining_this_order_you_can_save">Joining this order you can save:</string>
</resources>