<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#8C9EFF"
            android:gravity="center_vertical"
            android:text="contact det"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtCreatorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/CreatorName"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtCreatorName"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/phone"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txtCreatorName"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="150dp"
            android:text="@string/DeliveryAddress"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/txtDeliveryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/txtPhone"
            android:layout_alignStart="@id/txtAddress"
            android:textColor="@color/black"
            android:text="@string/DeliveryDate"
            android:textSize="10sp" />

        <ImageButton
            android:id="@+id/Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDeliveryDate"
            android:layout_marginRight="5dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/baseline_cancel_24"
            android:text="@string/join"
            android:textSize="10sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>