<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productDetails"
            android:layout_marginTop="22dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:scaleType="centerCrop"

            android:textColor="@color/black"

            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgPro"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
           />

        <ImageButton
            android:id="@+id/uploadImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="16dp"
            android:src="@drawable/baseline_upload_24" />

        <EditText
            android:id="@+id/EditTextProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/productName"
            />

        <EditText
            android:id="@+id/EditTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/productPrice" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:entries="@array/categoryArray" />

        <EditText
            android:id="@+id/productDescribeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/productDescribe" />
        <EditText
            android:id="@+id/salePercentageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="Sale Percentage"
            android:inputType="number"
            android:digits="0123456789" />

        <Button
            android:id="@+id/addbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/addToCart"
            android:textColor="@color/white"
            android:background="#404040"
            />
    </LinearLayout>


    </ScrollView>
</RelativeLayout>
